// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer/components/avatars/AvatarWithFallback.tsx renders the fallback icon when no src url - human user 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Stack__StyledStack-sc-x3xa2i-0 iqrTOO"
        data-align="center"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-testid="avatar"
        data-wrap="nowrap"
      >
        <svg
          aria-hidden="true"
          class="octicon octicon-feed-person"
          display="inline-block"
          fill="currentColor"
          focusable="false"
          height="16"
          overflow="visible"
          style="vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm.847-8.145a2.502 2.502 0 1 0-1.694 0C5.471 8.261 4 9.775 4 11c0 .395.145.995 1 .995h6c.855 0 1-.6 1-.995 0-1.224-1.47-2.74-3.153-3.145Z"
          />
        </svg>
        <div
          class="Truncate__StyledTruncate-sc-23o1d2-0 dpBYZR"
          maxwidth="280"
          title="@gitify-app"
        >
          @gitify-app
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Stack__StyledStack-sc-x3xa2i-0 iqrTOO"
      data-align="center"
      data-direction="horizontal"
      data-gap="condensed"
      data-justify="start"
      data-padding="none"
      data-testid="avatar"
      data-wrap="nowrap"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-feed-person"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height="16"
        overflow="visible"
        style="vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm.847-8.145a2.502 2.502 0 1 0-1.694 0C5.471 8.261 4 9.775 4 11c0 .395.145.995 1 .995h6c.855 0 1-.6 1-.995 0-1.224-1.47-2.74-3.153-3.145Z"
        />
      </svg>
      <div
        class="Truncate__StyledTruncate-sc-23o1d2-0 dpBYZR"
        maxwidth="280"
        title="@gitify-app"
      >
        @gitify-app
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx renders the fallback icon when no src url - non human user 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Stack__StyledStack-sc-x3xa2i-0 iqrTOO"
        data-align="center"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-testid="avatar"
        data-wrap="nowrap"
      >
        <svg
          aria-hidden="true"
          class="octicon octicon-mark-github"
          display="inline-block"
          fill="currentColor"
          focusable="false"
          height="16"
          overflow="visible"
          style="vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
          />
        </svg>
        <div
          class="Truncate__StyledTruncate-sc-23o1d2-0 dpBYZR"
          maxwidth="280"
          title="@gitify-app"
        >
          @gitify-app
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Stack__StyledStack-sc-x3xa2i-0 iqrTOO"
      data-align="center"
      data-direction="horizontal"
      data-gap="condensed"
      data-justify="start"
      data-padding="none"
      data-testid="avatar"
      data-wrap="nowrap"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-mark-github"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height="16"
        overflow="visible"
        style="vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
        />
      </svg>
      <div
        class="Truncate__StyledTruncate-sc-23o1d2-0 dpBYZR"
        maxwidth="280"
        title="@gitify-app"
      >
        @gitify-app
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx renders the fallback icon when the image fails to load (isBroken = true) - human user 1`] = `
<div
  class="Stack__StyledStack-sc-x3xa2i-0 iqrTOO"
  data-align="center"
  data-direction="horizontal"
  data-gap="condensed"
  data-justify="start"
  data-padding="none"
  data-testid="avatar"
  data-wrap="nowrap"
>
  <img
    alt="gitify-app"
    class="Avatar__StyledAvatar-sc-2lv0r8-0 gqvLBU"
    data-component="Avatar"
    height="16"
    size="16"
    src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
    sx="[object Object]"
    width="16"
  />
  <div
    class="Truncate__StyledTruncate-sc-23o1d2-0 dpBYZR"
    maxwidth="280"
    title="@gitify-app"
  >
    @gitify-app
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx renders the fallback icon when the image fails to load (isBroken = true) - non human user 1`] = `
<div
  class="Stack__StyledStack-sc-x3xa2i-0 iqrTOO"
  data-align="center"
  data-direction="horizontal"
  data-gap="condensed"
  data-justify="start"
  data-padding="none"
  data-testid="avatar"
  data-wrap="nowrap"
>
  <img
    alt="gitify-app"
    class="Avatar__StyledAvatar-sc-2lv0r8-0 eNDtna"
    data-component="Avatar"
    height="16"
    size="16"
    src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
    sx="[object Object]"
    width="16"
  />
  <div
    class="Truncate__StyledTruncate-sc-23o1d2-0 dpBYZR"
    maxwidth="280"
    title="@gitify-app"
  >
    @gitify-app
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx should render avatar - human user 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Stack__StyledStack-sc-x3xa2i-0 iqrTOO"
        data-align="center"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-testid="avatar"
        data-wrap="nowrap"
      >
        <img
          alt="gitify-app"
          class="Avatar__StyledAvatar-sc-2lv0r8-0 gqvLBU"
          data-component="Avatar"
          height="16"
          size="16"
          src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
          sx="[object Object]"
          width="16"
        />
        <div
          class="Truncate__StyledTruncate-sc-23o1d2-0 dpBYZR"
          maxwidth="280"
          title="@gitify-app"
        >
          @gitify-app
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Stack__StyledStack-sc-x3xa2i-0 iqrTOO"
      data-align="center"
      data-direction="horizontal"
      data-gap="condensed"
      data-justify="start"
      data-padding="none"
      data-testid="avatar"
      data-wrap="nowrap"
    >
      <img
        alt="gitify-app"
        class="Avatar__StyledAvatar-sc-2lv0r8-0 gqvLBU"
        data-component="Avatar"
        height="16"
        size="16"
        src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
        sx="[object Object]"
        width="16"
      />
      <div
        class="Truncate__StyledTruncate-sc-23o1d2-0 dpBYZR"
        maxwidth="280"
        title="@gitify-app"
      >
        @gitify-app
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx should render avatar - non-human user 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Stack__StyledStack-sc-x3xa2i-0 iqrTOO"
        data-align="center"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-testid="avatar"
        data-wrap="nowrap"
      >
        <img
          alt="gitify-app"
          class="Avatar__StyledAvatar-sc-2lv0r8-0 eNDtna"
          data-component="Avatar"
          height="16"
          size="16"
          src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
          sx="[object Object]"
          width="16"
        />
        <div
          class="Truncate__StyledTruncate-sc-23o1d2-0 dpBYZR"
          maxwidth="280"
          title="@gitify-app"
        >
          @gitify-app
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Stack__StyledStack-sc-x3xa2i-0 iqrTOO"
      data-align="center"
      data-direction="horizontal"
      data-gap="condensed"
      data-justify="start"
      data-padding="none"
      data-testid="avatar"
      data-wrap="nowrap"
    >
      <img
        alt="gitify-app"
        class="Avatar__StyledAvatar-sc-2lv0r8-0 eNDtna"
        data-component="Avatar"
        height="16"
        size="16"
        src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
        sx="[object Object]"
        width="16"
      />
      <div
        class="Truncate__StyledTruncate-sc-23o1d2-0 dpBYZR"
        maxwidth="280"
        title="@gitify-app"
      >
        @gitify-app
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
